Ensure the map does not go behind the filters

--- a/app/stylesheets/dashboard/waterpoints.scss
+++ b/app/stylesheets/dashboard/waterpoints.scss
@@ -7,7 +7,7 @@
     left: 0;
     position: absolute;
     right: 0;
-    top: 0;
+    top: $filters-closed-height;
 
     & > .leaflet-map {
       height: 100%;
