--- a/app/stylesheets/layout.scss
+++ b/app/stylesheets/layout.scss
@@ -21,7 +21,7 @@ body {
   left: 0;
   position: absolute;
   right: 0;
-  top: $header-height;
+  top: 0;
   z-index: 3;
 }
 
